# codecell

./: .gitignore  PLAN_MVP.md  PLAN_V2.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
.husky/: pre-commit
docs/: CODEBASE_ANALYSIS.md  DEPENDENCY_DETECTION.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: execution.rs  mod.rs  project.rs  system.rs  window.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: mod.rs  project_manager.rs  runtime_detector.rs
src/components/About/: About.tsx  AboutPage.tsx  index.ts
src/components/CommandPalette/: CommandPalette.tsx  index.ts  useCommandPalette.ts
src/components/CompiledEditor/: CompiledEditor.tsx  index.ts
src/components/Launcher/: Launcher.tsx  QuickTemplates.tsx  RecentProjects.tsx  index.ts
src/components/Settings/: Settings.tsx  SettingsContent.tsx  SettingsPage.tsx  index.ts
src/components/WebEditor/: WebEditor.tsx  index.ts
src/components/common/: CodeEditor.tsx  ConfirmDialog.tsx  KeyboardShortcuts.tsx  MenuBar.tsx  Modal.tsx  SaveTemplateDialog.tsx  ThemeToggle.tsx  TitleBar.tsx  Toast.tsx  index.ts
src/hooks/: index.ts  useAutosave.ts  useKeyboardShortcuts.ts  useMenuEvents.ts  useProjectLoader.ts  useThemeCommands.ts  useThemeCommands.tsx  useUnsavedChanges.ts  useWindowState.ts  useWindowTitle.ts
src/stores/: projectStore.ts  settingsStore.ts
src/types/: index.ts  templates.ts
